# omfilespy

Swift/: Package.swift
Swift/Sources/OmFileInterface/: CInterface.swift
Swift/Sources/SwiftPFor2D/: Backend+Extensions.swift
Swift/Tests/SwiftPFor2DTests/: SwiftPFor2DTests.swift
python/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile-common.mk  README.md  bindings.cpp  pyproject.toml  test_file.om
python/omfilespy/: __init__.py
python/tests/: test_omfiles_bindings.py
