[project]
name = "omfilespy"
description = "Blub"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy~=2.1"]

[project.optional-dependencies]
dev = [
    "build~=1.0",
    "pre-commit~=3.4",
    "pytest~=8.0",
    "ruff~=0.5.1",
    "twine~=5.0",
]

[build-system]
requires = ["pybind11~=2.13.1", "scikit-build-core>=0.3.3"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build.verbose = true
wheel.expand-macos-universal-tags = true

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "build"]
strictListInference = true
strictDictionaryInference = true
strictParameterNoneValue = true
reportTypedDictNotRequiredAccess = false
reportIncompatibleVariableOverride = true
reportIncompatibleMethodOverride = true
reportMatchNotExhaustive = true
reportUnnecessaryTypeIgnoreComment = true

[tool.ruff]
line-length = 120
# first-party imports for sorting
src = ["."]
fix = true
show-fixes = true

[tool.ruff.lint]
# rules to enable/ignore
select = [
    "F",    # pyflakes
    "E",    # pycodestyle
    "W",    # pycodestyle
    "ANN",  # type annotations
    "N",    # pep8-naming
    "B",    # bugbear
    "I",    # isort
    "ARG",  # flake8-unused-arguments
    "SLF",  # flake8-self
    "UP",   # pyupgrade
    "PERF", # perflint
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "S113", # request-without-timeout
]
ignore = [
    # allow untyped self and cls args
    "ANN101",
    "ANN102",
    # allow no return type from dunder methods
    "ANN204",
    # allow == True because pandas dataframes overload equality
    "E712",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.per-file-ignores]
# test functions don't need return types
"tests/*" = ["ANN201", "ANN202"]

[tool.ruff.lint.flake8-annotations]
# allow *args: Any, **kwargs: Any
allow-star-arg-any = true
